--- a/style.css
+++ b/style.css
@@ -336,3 +336,13 @@ button {
   transform:scaleX(var(--w,0));
   z-index:-1;
 }
+
+/* add to style.css */
+td[data-pct]{
+  background-image: linear-gradient(
+    to right,
+    rgba(255,0,0,0.85) calc(var(--w)*1%),
+    transparent 0
+  );
+}
+
